--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         font-family: 'Gilroy';
         src: url('gilroy-medium-webfont.woff2') format('woff2'),
              url('gilroy-medium-webfont.woff') format('woff'),
-            local('Gilroy Medium'), url('Gilroy-Medium.ttf') format('truetype');
+             url('Gilroy-Medium.ttf') format('truetype');
         font-weight: 500;
         font-style: normal;
         font-display: swap;
@@ -14,7 +14,7 @@
         font-family: 'webfontregular';
         src: url('gilroy-medium-webfont.woff2') format('woff2'),
              url('gilroy-medium-webfont.woff') format('woff'),
-            local('Gilroy Medium'), url('Gilroy-Medium.ttf') format('truetype');
+             url('Gilroy-Medium.ttf') format('truetype');
         font-weight: 500;
         font-style: normal;
         font-display: swap;
@@ -23,8 +23,8 @@
         font-family: 'Gilroy';
         src: url('gilroy-semibold-webfont.woff2') format('woff2'),
              url('gilroy-semibold-webfont.woff') format('woff'),
-            local('Gilroy SemiBold'), url('Gilroy-SemiBold.ttf') format('truetype');
+             url('Gilroy-SemiBold.ttf') format('truetype');
         font-weight: 600;
         font-style: normal;
         font-display: swap;
-      }</style><link href="/css/app.522a933f.css" rel="preload" as="style"><link href="/css/chunk-vendors.91d5ac89.css" rel="preload" as="style"><link href="/js/app.d8269dbf.js" rel="preload" as="script"><link href="/js/chunk-vendors.ed8a3bcb.js" rel="preload" as="script"><link href="/css/chunk-vendors.91d5ac89.css" rel="stylesheet"><link href="/css/app.522a933f.css" rel="stylesheet"></head><body><noscript><font color="white"><strong>We're sorry but Frontend Template doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></font></noscript><div id="app"><center><img src="https://proxy.duckduckgo.com/iu/?u=https%3A%2F%2Fcdn2.scratch.mit.edu%2Fget_image%2Fgallery%2F1115204_170x100.png&f=1" width="116" height="100"></center></div><script src="/js/chunk-vendors.ed8a3bcb.js"></script><script src="/js/app.d8269dbf.js"></script></body></html>
+      }</style><link href="/css/app.2f59bb1e.css" rel="preload" as="style"><link href="/css/chunk-vendors.91d5ac89.css" rel="preload" as="style"><link href="/js/app.883394a7.js" rel="preload" as="script"><link href="/js/chunk-vendors.ed8a3bcb.js" rel="preload" as="script"><link href="/css/chunk-vendors.91d5ac89.css" rel="stylesheet"><link href="/css/app.2f59bb1e.css" rel="stylesheet"></head><body><noscript><font color="white"><strong>We're sorry but Frontend Template doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></font></noscript><div id="app"><center><img src="https://proxy.duckduckgo.com/iu/?u=https%3A%2F%2Fcdn2.scratch.mit.edu%2Fget_image%2Fgallery%2F1115204_170x100.png&f=1" width="116" height="100"></center></div><script src="/js/chunk-vendors.ed8a3bcb.js"></script><script src="/js/app.883394a7.js"></script></body></html>
