--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900|Material+Icons" rel="stylesheet"><link href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css" rel="stylesheet"><title>Frontend template</title><script src="https://apis.google.com/js/api:client.js"></script><style rel="stylesheet" type="text/css" charset="utf-8">body {
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900|Material+Icons" rel="stylesheet"><link href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css" rel="stylesheet"><title>Frontend template</title><script src="https://apis.google.com/js/api:client.js"></script><link rel="preload" href="Gilroy-SemiBold.woff2" as="font" type="font/woff2" crossorigin><link rel="preload" href="Gilroy-Medium.woff2" as="font" type="font/woff2" crossorigin><style rel="stylesheet" type="text/css" charset="utf-8">body {
         background-color: #040404
       }
       @font-face {
         font-family: 'Gilroy';
-        src: url('gilroy-medium-webfont.woff2') format('woff2'),
-             url('gilroy-medium-webfont.woff') format('woff'),
+        src: url('Gilroy-Medium.woff2') format('woff2'),
+             url('Gilroy-Medium.woff') format('woff'),
              url('Gilroy-Medium.ttf') format('truetype');
         font-weight: 500;
         font-style: normal;
@@ -12,8 +12,8 @@
       }
       @font-face {
         font-family: 'webfontregular';
-        src: url('gilroy-medium-webfont.woff2') format('woff2'),
-             url('gilroy-medium-webfont.woff') format('woff'),
+        src: url('Gilroy-Medium.woff2') format('woff2'),
+             url('Gilroy-Medium.woff') format('woff'),
              url('Gilroy-Medium.ttf') format('truetype');
         font-weight: 500;
         font-style: normal;
@@ -21,10 +21,10 @@
       }
       @font-face {
         font-family: 'Gilroy';
-        src: url('gilroy-semibold-webfont.woff2') format('woff2'),
-             url('gilroy-semibold-webfont.woff') format('woff'),
+        src: url('Gilroy-SemiBold.woff2') format('woff2'),
+             url('Gilroy-SemiBold.woff') format('woff'),
              url('Gilroy-SemiBold.ttf') format('truetype');
         font-weight: 600;
         font-style: normal;
         font-display: swap;
-      }</style><link href="/css/app.4184eaf1.css" rel="preload" as="style"><link href="/css/chunk-vendors.91d5ac89.css" rel="preload" as="style"><link href="/js/app.db78ea90.js" rel="preload" as="script"><link href="/js/chunk-vendors.ed8a3bcb.js" rel="preload" as="script"><link href="/css/chunk-vendors.91d5ac89.css" rel="stylesheet"><link href="/css/app.4184eaf1.css" rel="stylesheet"></head><body><noscript><font color="white"><strong>We're sorry but Frontend Template doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></font></noscript><div id="app"><center><img src="https://proxy.duckduckgo.com/iu/?u=https%3A%2F%2Fcdn2.scratch.mit.edu%2Fget_image%2Fgallery%2F1115204_170x100.png&f=1" width="116" height="100"></center></div><script src="/js/chunk-vendors.ed8a3bcb.js"></script><script src="/js/app.db78ea90.js"></script></body></html>
+      }</style><link href="/css/app.bc3ffafd.css" rel="preload" as="style"><link href="/css/chunk-vendors.91d5ac89.css" rel="preload" as="style"><link href="/js/app.73a46dad.js" rel="preload" as="script"><link href="/js/chunk-vendors.ed8a3bcb.js" rel="preload" as="script"><link href="/css/chunk-vendors.91d5ac89.css" rel="stylesheet"><link href="/css/app.bc3ffafd.css" rel="stylesheet"></head><body><noscript><font color="white"><strong>We're sorry but Frontend Template doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></font></noscript><div id="app"><center><img src="https://proxy.duckduckgo.com/iu/?u=https%3A%2F%2Fcdn2.scratch.mit.edu%2Fget_image%2Fgallery%2F1115204_170x100.png&f=1" width="116" height="100"></center></div><script src="/js/chunk-vendors.ed8a3bcb.js"></script><script src="/js/app.73a46dad.js"></script></body></html>
